Fix opp score overlap, make played areas lighter green, make circles dark gray at all sizes

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ body {
     height: 220px;
     width: 160px;
     border: 5px rgb(0, 30, 0) dashed;
+    background-color: rgb(0, 59, 0);
 }
 
 /* #opp-played .your-card {
@@ -95,6 +96,7 @@ body {
     height: 220px;
     width: 160px;
     border: 5px rgb(0, 30, 0) dashed;
+    background-color: rgb(0, 59, 0);
 }
 
 #play-button {
@@ -135,14 +137,14 @@ body {
 
 #opp-score-number {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 80px;
+    font-size: 50px;
     text-align: center;
     margin: 0;
 }
 
 #your-score-number {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 80px;
+    font-size: 50px;
     text-align: center;
     margin: 0;
 }
